--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-sneakers-shop",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mikesaburov.github.io/react-sneakers-shop/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -21,7 +22,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
